libs/@local/hashql/ast/tests/ui/lowering/import-resolver/continue/unresolved-value.jsonc
//@ run: pass
//@ description: Tests that an unresolved value (function `bit_shl`) is handled by dummy replacement, allowing lowering to continue.
[
  "shl",
  //~^ ERROR Cannot find variable 'shl'
  { "#literal": 1 },
  { "#literal": 4 }
]
